# RIMG

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/app/: main.cpp  main.hpp
src/misc/: keys.hpp  types.hpp
src/plugin/: Plugin.cpp  Plugin.hpp  dllmain.cpp  dllmain.hpp  gta_misc.cpp  gta_misc.hpp  utils.cpp  utils.hpp
